updates: fix layout issues for deskpt addpanel

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,8 +287,9 @@ select {
 @media screen and (min-width: 980px) {
   #addPanel {
     width: 100%;
+    height: 0vh;
     margin: 0px;
-    padding: 0.1%;
+    padding: 0.5%;
     max-height: 600px;
     overflow: hidden;
   }
